--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.75.1
+
+MYAPP_UPLOAD_STORE_FILE=mme.keystore
+MYAPP_UPLOAD_KEY_ALIAS=meumenu
+MYAPP_UPLOAD_STORE_PASSWORD=988991495dD
+MYAPP_UPLOAD_KEY_PASSWORD=988991495dD
