--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,12 +152,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
-        /*release {
+        release {
             storeFile file('meumenu.keystore')
             storePassword '988991495dD'
             keyAlias 'danielmme'
             keyPassword '988991495dD'
-        }*/
+        }
     }
     buildTypes {
         debug {
@@ -166,7 +166,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
